########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

CHANGED:

* Changed the options to uWSGI to try to get better performance.

DEPRECATED:

REMOVED:

FIXED:

* Fixed an issue whereby the Python sandbox could leave handles to deleted
  files open (eventually leading to an error from having too many files open).

* Changed the Python sandbox to use sys.executable (instead of hard-coded path
  to an assumed location of a Python interpreter) when csq_python_interpreter is
  not set.

SECURITY:

DOCUMENTATION:


##################
# Version 11.0.5 #
##################

ADDED:

* Added the get_upload utility for downloading uploaded files.

* Added "extra_data" field to checker results.

* Added tutor.read_checker_result for quickly reading checker results.

* Added csq_npoints as an option to the "pythoncode" question type.  If
  specified, it overrides any point values assigned to the individual test
  cases.

CHANGED:

* Changed the default checker used for multiple-choice-multiple-answer problems.

* The "fileupload" question type now uses get_upload to download user files,
  rather than a data URI.

* Made changes to make sure that files are always closed after being opened.

FIXED:

* Fixed a potential race condition in the "pythoncode" question type.

* Fixed an issue with the "expression" question type, where overzealous type
  checking led to some correct answers being marked as incorrect.

* Fixed issues with the circuit simulator question type that prevented an AC
  analysis from being run interactively, and that caused incorrect AC results
  to be sent to the checker.

* Changes to make sure that reasonable fonts are used (particularly in <pre>,
  <code>, and <tt>) even if our fonts are not loaded.

* Some small temporary fixes to AC analysis in the circuit simulator for the
  "circuit" question type.

SECURITY:
